<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--<string name="app_name">EspTouch</string>-->
    <!--<string name="ssid_title">SSID: </string>-->
    <!--<string name="bssid_title">BSSID: </string>-->
    <!--<string name="password_title">Password: </string>-->
    <!--<string name="device_count_title">Device count: </string>-->
    <!--<string name="confirm">Confirm</string>-->
    <!--<string name="wifi_5g_message">Device dose not support 5G Wifi</string>-->
    <string name="app_name">智能设备控制</string>
    <string name="ssid_title">wifi名称: </string>
    <string name="bssid_title">mac地址: </string>
    <string name="password_title">wifi密码: </string>
    <string name="device_count_title">设备总数：</string>
    <string name="confirm">开始设置</string>
    <string name="wifi_5g_message">设备不支持 5G wifi</string>
    <string name="save">添加</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="title_activity_login">九达物联</string>
</resources>
